correction on binomiale

--- a/probabilité/probabilité.ipynb
+++ b/probabilité/probabilité.ipynb
@@ -93,7 +93,7 @@
    "source": [
     "## La variable aléatoire\n",
     "\n",
-    "La variable aléatoire est un concept fondamental en statistique qui fait le lien entre la probabilité théorique et les données du monde réel. Dans un context de psychologie expériementale nous mesurons des données comme des mouvements oculaires ou des choix. Typiquement, on considère que ces donnée (notée comme $x$) sont généres par une variable aléatoire (notée comme $X$). La valeur de la variable aléatoire n'est pas directement observable ; nous n'avons accès qu'aux réalisations de cette variable à travers les données mesurées.\n",
+    "La variable aléatoire est un concept fondamental en statistique qui fait le lien entre la probabilité théorique et les données du monde réel. Dans un context de psychologie expériementale nous mesurons des données comme des mouvements oculaires ou des choix. Typiquement, on considère que ces données (notée comme $x$) sont généres par une variable aléatoire (notée comme $X$). La valeur de la variable aléatoire n'est pas directement observable ; nous n'avons accès qu'aux réalisations de cette variable à travers les données mesurées.\n",
     "\n",
     "\n",
     "Formellement, la variable aléatoire $X$ est une fonction de l'espace d'échantillonnage $\\Omega$ des issues possibles $\\omega$ vers le système des nombres réels $\\mathbb{R}$ :\n",
@@ -103,12 +103,12 @@
     "La variable aléatoire associe à chaque issue $\\omega$ un nombre : $X(\\omega) = x, \\omega \\in \\Omega$. Cette valuer numerique peut être considéré comme un nombre qui capture un aspect pertinent de ce qui est en fait une réalité beaucoup plus complexe.\n",
     "\n",
     "\n",
-    "Ses valeurs sont déterminées par le résultat d’une expérience ou d'un processus aléatoire. Par \"aléatoire\", nous ne voulons pas dire totalement imprévisible. Un processus aléatoire est simplement un processus dont le résultat ne peut pas être parfaitement connu à l'avance (il peut néanmoins être assez prévisible). Ainsi, pour un lancer de dé, nous pouvons créer une variable aléatoire $X$ qui prend une valeur de 1 si le dé tombe sur 1, de 2 s'il tombe sur 2, et ansi de suite. Comme le lancer de dé ne peut produire qu'un nombre défini d'événements (dans ce cas six), $X$ est une variable aléatoire discrète.\n",
+    "Ses valeurs sont déterminées par le résultat d’une expérience. Par \"aléatoire\", nous ne voulons pas dire totalement imprévisible. Un processus aléatoire est simplement un processus dont le résultat ne peut pas être parfaitement connu à l'avance (il peut néanmoins être assez prévisible). Ainsi, pour un lancer de dé, nous pouvons créer une variable aléatoire $X$ qui prend une valeur de 1 si le dé tombe sur 1, de 2 s'il tombe sur 2, et ansi de suite. Comme le lancer de dé ne peut produire qu'un nombre défini d'événements (dans ce cas six), $X$ est une variable aléatoire discrète.\n",
     "\n",
     "En termes de notation, on utilise typiquement les conventions suivantes :\n",
     "\n",
     "* la variable aléatoire est notée avec une majuscule $X$ et la valeur numérique avec une minuscule $x$,\n",
-    "* la probabilité que la variable aléatoire ait une certaine valeur numérique est notée $P(X = x)$ -- cela correspond à la version abrégée de la version plus précise $P(\\{\\omega \\in \\Omega \\mid X(\\omega) = x\\})$,\n",
+    "* la probabilité que la variable aléatoire ait une certaine valeur numérique est notée $P(X = x)$ -- cela correspond à la version abrégée de la version plus précise $P(\\{\\omega \\in \\Omega : X(\\omega) = x\\})$,\n",
     "* la probabilité que la variable aléatoire prenne un valeur numérique plus grande ou égale à un certain seuil $x$ est notée $P(X≤x)$.\n"
    ]
   },
