--- a/motivations/motivations.ipynb
+++ b/motivations/motivations.ipynb
@@ -33,8 +33,8 @@
     "# libraries\n",
     "\n",
     "# installation, à faire une seule fois\n",
-    "# install.packages(\"ggplot2\") \n",
-    "# install.packages (\"scale\")\n",
+    "install.packages(\"ggplot2\") \n",
+    "install.packages (\"scale\")\n",
     "\n",
     "# chargement\n",
     "library(ggplot2) \n",
