Add instructions to install R packaages in various locations

--- a/motivations/motivations.ipynb
+++ b/motivations/motivations.ipynb
@@ -20,6 +20,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5fee515c",
+   "metadata": {},
+   "source": [
+    "### Installation des packages R\n",
+    "\n",
+    "Choisissez une des trois options suivantes pour installer les packages R en fonction de votre situation et de vos préférences."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06378ede",
+   "metadata": {},
+   "source": [
+    "#### Sur votre ordinateur personnel\n",
+    "\n",
+    "**Option 1 :** installer les packages à la localisation par défaut"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7cda05f4",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Installer les packages à la localisation par défaut\n",
+    "install.packages(\"ggplot2\") \n",
+    "install.packages (\"scale\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16b27cdc",
+   "metadata": {},
+   "source": [
+    "#### Sur les machines virtuelles FPSE\n",
+    "\n",
+    "L'option 1 ne fonctionne pas sur les machines virtuelles FPSE car nous n'avons pas la permission d'écrire à la localisation par défaut. Il faut donc choisir l'option 2 ou 3 selon votre préférence. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "622d4e25",
+   "metadata": {},
+   "source": [
+    "**Option 2 :** installer les packages sur le disque H (`H:/`)\n",
+    "\n",
+    "Avantage : vous n'aurez pas besoin de réinstaller les packages à chaque fois que vous vous connectez à la machine virtuelle car le contenu de votre disque H personnel est conservé.  \n",
+    "Désavantage : les packages occupent de l'espace de stockage sur votre disque H."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d4f91c89-c40c-4fbe-83c9-f27e5b3e6b26",
@@ -30,18 +87,100 @@
    },
    "outputs": [],
    "source": [
-    "# libraries\n",
+    "# Pour installer les packages R sur votre disque H\n",
     "\n",
-    "# installation, à faire une seule fois\n",
+    "# Créer un répertoire sur le disque H pour les packages R\n",
+    "dir.create(\"H:/R/win-library/4.4\", recursive = TRUE)\n",
+    "\n",
+    "# Indiquer à R d'installer les packages R dans ce répertoire \n",
+    ".libPaths(\"H:/R/win-library/4.4\")\n",
+    "\n",
+    "# Installer les packages \n",
     "install.packages(\"ggplot2\") \n",
-    "install.packages (\"scale\")\n",
+    "install.packages (\"scale\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bae5ac1b",
+   "metadata": {},
+   "source": [
+    "**Option 3 :** installer les packages sur le disque local (`C:/`)\n",
     "\n",
-    "# chargement\n",
+    "Avantage : les packages n'occupent pas d'espace de stockage sur votre disque H.  \n",
+    "Désavantage : vous devrez réinstaller les packages à chaque fois que vous vous connectez à la machine virtuelle car le contenu du disque local n'est pas conservé lorsque vous vous déconnectez.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c64bdd5",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Pour installer les packages R sur le disque local\n",
+    "\n",
+    "# Indiquer à R d'installer les packages R dans ce répertoire \n",
+    "# ATTENTION : remplacer \"votre_identifiant_isis\" dans la commande suivante par\n",
+    "# votre identifiant ISIS (nom court), e.g. \"C:/Users/wuensch/R/win-library/4.4\"\n",
+    ".libPaths(\"C:/Users/votre_identifiant_isis/R/win-library/4.4\")\n",
+    "\n",
+    "# Installer les packages \n",
+    "install.packages(\"ggplot2\") \n",
+    "install.packages (\"scale\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8bf76d58",
+   "metadata": {},
+   "source": [
+    "### Chargement des packages R\n",
+    "\n",
+    "Une fois installés, les packages R doivent être chargés dans la session R. Cette étape devra être exécutée à chaque fois que vous ouvrez une nouvelle session R, indépendamment d'où les packages sont installés."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c50a7ffe",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Chargement des packages\n",
     "library(ggplot2) \n",
-    "library(scales)\n",
-    "\n",
-    "# couleur pour le graphique\n",
-    "darkred  = \"#8B0000\"   \n"
+    "library(scales)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84a1b485",
+   "metadata": {},
+   "source": [
+    "### Autres aspects techniques"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b113e3fb",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Couleur pour le graphique\n",
+    "darkred  = \"#8B0000\"   "
    ]
   },
   {
