Check continuous probability section

--- a/probabilité/probabilité.ipynb
+++ b/probabilité/probabilité.ipynb
@@ -799,7 +799,7 @@
    "id": "4396c29d-3f42-4c3a-bec5-a0ae79cc53a6",
    "metadata": {},
    "source": [
-    "Vous pouvez observer que la probabilité d'avoir moins de 0, 1 ou 2 personnes qui ont une rechute augmente plus le traitement a une paramètre $\\theta$ qui indique une faible probabilité de rechute."
+    "Vous pouvez observer que la probabilité d'avoir moins de 0, 1 ou 2 personnes qui ont une rechute augmente plus le traitement a un paramètre $\\theta$ qui indique une faible probabilité de rechute."
    ]
   },
   {
@@ -819,11 +819,11 @@
     }
    },
    "source": [
-    "Une variable aléatoire est dite continue lorsqu’elle peut prendre toutes les valeurs dans un support donné. Un example d'une variable aléatoire continue peut être la mésure de la taille en cm, ou encore la mésure du temps pris pour compléter une tâche en seconds ou milliseconds.\n",
+    "Une variable aléatoire est dite continue lorsqu’elle peut prendre toutes les valeurs dans un support donné. Un exemple d'une variable aléatoire continue est la mesure de la taille en cm, ou encore la mesure du temps pris pour compléter une tâche en secondes ou millisecondes.\n",
     "\n",
-    "Si vous réfléchissez attentivement à un espace de résultats dans le cadre d'une variable aléatoire continue, vous vous pouvez réaliser rapidement qu’il devient problématique de parler de la probabilité d’une valeur spécifique sur l'échelle continue. Par exemple, la probabilité qu’une personne choisie au hasard ait une taille en cm exactement égale à 168.854 est essentiellement nulle, le même est valable pour la probabilité que une personne prenne exactement 20 min 37 s et 454 ms pour accomplir une tâche expérimentale. De manière générale, cela est vrai pour toute valeur exacte à laquelle vous pouvez penser. \n",
+    "Si vous réfléchissez attentivement à un espace de résultats dans le cadre d'une variable aléatoire continue, vous pouvez réaliser rapidement qu’il devient problématique de parler de la probabilité d’une valeur spécifique sur l'échelle continue. Par exemple, la probabilité qu’une personne choisie au hasard ait une taille en cm exactement égale à 168.854 est essentiellement nulle. De la même manière, la probabilité qu'une personne prenne exactement 20 min 37 s et 454 ms pour accomplir une tâche expérimentale est essentiellement nulle. De manière générale, cela est vrai pour toute valeur exacte à laquelle vous pouvez penser. \n",
     "\n",
-    "C'est pour cela que quand on passe aux distribution continues, on utilse le concept de *densité*. Très concrètement, dans le cas d'une distribution continue on ne s'intéresse pas au calcule de la probabilité d'une valeur précise de la variable aléatoire, mais plutôt la proabilité que la variable aléatoire prenne une valeur dans un certain intérval $[a,b]$. Par example on calcule la probabilité que la taille d'une personne choisie au hasard est entre 160 et 170 cm, ou encore la proabilité que une personne prenne entre 20 et 25 minutes pour accomplir une tâche expériementale. Ce calcul se fait à l'aide d'une fonction de densité qui correspond à l'aire sous la courbe dans la distribution des probabilités de la variable continue.\n",
+    "C'est pour cela que quand on parle de distributions continues, on utilise le concept de *densité*. Concrètement, dans le cas d'une distribution continue on ne s'intéresse pas au calcul de la probabilité d'une valeur précise de la variable aléatoire, mais on s'intéresse plutôt à la probabilité que la variable aléatoire ait une valeur contenue dans un certain intervalle $[a,b]$. Par exemple, on peut calculer la probabilité que la taille d'une personne choisie au hasard soit comprise entre 160 et 170 cm, ou encore la probabilité qu'une personne prenne entre 20 et 25 minutes pour accomplir une tâche expérimentale. Ce calcul se fait à l'aide d'une fonction de densité, qui correspond à l'aire sous la courbe dans la distribution des probabilités de la variable continue.\n",
     "\n",
     "\n",
     "$$\n",
@@ -831,10 +831,10 @@
     "$$\n",
     "\n",
     "où :  \n",
-    "- $ P(X \\in [a,b]) $ représente la probabilité que la variable aléatoire \\( X \\) prenne une valeur dans l'intervalle $ [a,b] $.  \n",
-    "- $ \\int_{a}^{b} f(x) \\,dx $ est l'intégrale de la fonction de densité $f(x)$ entre $a$ et $b$ ce qui correspond à l'aire sous la courbe de \\( f(x) \\) sur cet intervalle.  \n",
-    "- $f(x)$ est la fonction de densité de probabilité (FDP) associée à $X$ qui décrit comment les valeurs de $ X$ sont distribuées.  \n",
-    "- $a$ et $b$ sont les bornes de l'intervalle considéré.  \n"
+    "- $ P(X \\in [a,b]) $ représente la probabilité que la variable aléatoire \\( X \\) ait une valeur contenue dans l'intervalle $ [a,b] $  \n",
+    "- $ \\int_{a}^{b} f(x) \\,dx $ est l'intégrale de la fonction de densité $f(x)$ entre $a$ et $b$ ce qui correspond à l'aire sous la courbe de \\( f(x) \\) sur cet intervalle  \n",
+    "- $f(x)$ est la fonction de densité de probabilité (FDP) associée à $X$ qui décrit comment les valeurs de $ X$ sont distribuées  \n",
+    "- $a$ et $b$ sont les bornes de l'intervalle considéré  \n"
    ]
   },
   {
