Add code to change R language parameter

--- a/motivations/motivations.ipynb
+++ b/motivations/motivations.ipynb
@@ -21,6 +21,34 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4dfcc292",
+   "metadata": {},
+   "source": [
+    "### Changer le paramètre de langue dans R\n",
+    "\n",
+    "Vous pouvez changer le paramètre de langue de R de la manière suivante :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa0d0c5d",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Français\n",
+    "Sys.setenv(LANG = \"fr\")\n",
+    "\n",
+    "# Anglais\n",
+    "Sys.setenv(LANG = \"en\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5fee515c",
    "metadata": {},
    "source": [
@@ -51,8 +79,8 @@
    "outputs": [],
    "source": [
     "# Installer les packages à la localisation par défaut\n",
-    "install.packages(\"ggplot2\") \n",
-    "install.packages (\"scale\")"
+    "install.packages(\"ggplot2\")\n",
+    "install.packages(\"scale\")"
    ]
   },
   {
@@ -92,12 +120,12 @@
     "# Créer un répertoire sur le disque H pour les packages R\n",
     "dir.create(\"H:/R/win-library/4.4\", recursive = TRUE)\n",
     "\n",
-    "# Indiquer à R d'installer les packages R dans ce répertoire \n",
+    "# Indiquer à R d'installer les packages R dans ce répertoire\n",
     ".libPaths(\"H:/R/win-library/4.4\")\n",
     "\n",
-    "# Installer les packages \n",
-    "install.packages(\"ggplot2\") \n",
-    "install.packages (\"scale\")"
+    "# Installer les packages\n",
+    "install.packages(\"ggplot2\")\n",
+    "install.packages(\"scale\")"
    ]
   },
   {
@@ -124,14 +152,14 @@
    "source": [
     "# Pour installer les packages R sur le disque local\n",
     "\n",
-    "# Indiquer à R d'installer les packages R dans ce répertoire \n",
+    "# Indiquer à R d'installer les packages R dans ce répertoire\n",
     "# ATTENTION : remplacer \"votre_identifiant_isis\" dans la commande suivante par\n",
-    "# votre identifiant ISIS (nom court), e.g. \"C:/Users/wuensch/R/win-library/4.4\"\n",
-    ".libPaths(\"C:/Users/votre_identifiant_isis/R/win-library/4.4\")\n",
+    "# votre identifiant ISIS (nom court), e.g. \"C:/Users/wuensch/AppData/Local/R/win-library/4.4\"\n",
+    ".libPaths(\"C:/Users/votre_identifiant_isis/AppData/Local/R/win-library/4.4\")\n",
     "\n",
-    "# Installer les packages \n",
-    "install.packages(\"ggplot2\") \n",
-    "install.packages (\"scale\")"
+    "# Installer les packages\n",
+    "install.packages(\"ggplot2\")\n",
+    "install.packages(\"scale\")"
    ]
   },
   {
@@ -156,7 +184,7 @@
    "outputs": [],
    "source": [
     "# Chargement des packages\n",
-    "library(ggplot2) \n",
+    "library(ggplot2)\n",
     "library(scales)"
    ]
   },
@@ -180,7 +208,7 @@
    "outputs": [],
    "source": [
     "# Couleur pour le graphique\n",
-    "darkred  = \"#8B0000\"   "
+    "darkred <- \"#8B0000\""
    ]
   },
   {
@@ -298,8 +326,7 @@
     ")\n",
     "\n",
     "# Vérification des premières lignes\n",
-    "head(simulated_data)\n",
-    "\n"
+    "head(simulated_data)"
    ]
   },
   {
@@ -345,11 +372,11 @@
     }
    ],
    "source": [
-    "bin_size = 5\n",
+    "bin_size <- 5\n",
     "\n",
     "ggplot(simulated_data, aes(x = anxiety)) +\n",
     "  geom_histogram(binwidth = bin_size, fill = darkred, color = darkred, alpha = 0.6) +\n",
-    "  geom_density(aes(y = ..count.. * bin_size),  color = \"black\",  linewidth = 1) +  # Ajustement de l'échelle\n",
+    "  geom_density(aes(y = ..count.. * bin_size), color = \"black\",  linewidth = 1) +  # Ajustement de l'échelle\n",
     "  labs(title = \"Distribution des scores d'anxiété (STAI-State)\",\n",
     "       x = \"Score d'anxiété STAI-State\",\n",
     "       y = \"Count\") +\n",
@@ -400,7 +427,7 @@
    },
    "outputs": [],
    "source": [
-    "glm_anxiety = lm(anxiety ~ socioecon, data = simulated_data)\n"
+    "glm_anxiety <- lm(anxiety ~ socioecon, data = simulated_data)\n"
    ]
   },
   {
@@ -574,18 +601,17 @@
     }
    ],
    "source": [
-    "residuals = summary(glm_anxiety)$residuals\n",
+    "residuals <- summary(glm_anxiety)$residuals\n",
     "\n",
-    "bin_size = 5\n",
+    "bin_size <- 5\n",
     "\n",
     "ggplot(simulated_data, aes(x = residuals )) +\n",
     "  geom_histogram(binwidth = bin_size, fill = darkred, color = darkred, alpha = 0.6) +\n",
-    "  geom_density(aes(y = ..count.. * bin_size),  color = \"black\",  linewidth = 1) +  # Ajustement de l'échelle\n",
+    "  geom_density(aes(y = ..count.. * bin_size), color = \"black\",  linewidth = 1) +  # Ajustement de l'échelle\n",
     "  labs(title = \"Vérification des postulats\",\n",
     "       x = \"Residus du modèle\",\n",
     "       y = \"Count\") +\n",
-    "  theme_minimal()\n",
-    "\n"
+    "  theme_minimal()"
    ]
   },
   {
@@ -602,18 +628,6 @@
     "\n",
     "La méthode OLS utilisée ici pour estimer les paramètres ne peut pas être considérée directement comme une méthode de calcul de la vraisemblance, car elle ne repose pas explicitement sur un cadre probabiliste. Dans la suite du cours, nous verrons comment utiliser des concepts probabilistes tels que la vraisemblance pour estimer les paramètres et comment nous pouvons utiliser des méthodes probabilistes pour améliorer ces estimations en injectant des connaissances que nous avons a priori dans le processus d'estimation."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c214a3d3-d07c-4d2f-b174-9f9c5f6e0fbe",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
