--- a/motivations/motivations.ipynb
+++ b/motivations/motivations.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "fa0d0c5d",
    "metadata": {
     "vscode": {
@@ -41,8 +41,20 @@
    "outputs": [],
    "source": [
     "# Français\n",
-    "Sys.setenv(LANG = \"fr\")\n",
-    "\n",
+    "Sys.setenv(LANG = \"fr\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ebdf046",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
     "# Anglais\n",
     "Sys.setenv(LANG = \"en\")"
    ]
