Implement changes for new vdi

--- a/motivations/motivations.ipynb
+++ b/motivations/motivations.ipynb
@@ -40,7 +40,7 @@
    },
    "outputs": [],
    "source": [
-    "# Français\n",
+    "# Pour le français, exécutez cette cellule\n",
     "Sys.setenv(LANG = \"fr\")"
    ]
   },
@@ -55,7 +55,7 @@
    },
    "outputs": [],
    "source": [
-    "# Anglais\n",
+    "# Pour l'anglais, exécutez cette cellule\n",
     "Sys.setenv(LANG = \"en\")"
    ]
   },
@@ -66,17 +66,7 @@
    "source": [
     "### Installation des packages R\n",
     "\n",
-    "Choisissez une des trois options suivantes pour installer les packages R en fonction de votre situation et de vos préférences."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "06378ede",
-   "metadata": {},
-   "source": [
-    "#### Sur votre ordinateur personnel\n",
-    "\n",
-    "**Option 1 :** installer les packages à la localisation par défaut"
+    "Nous commençons par installer les packages dont nous avons besoin :"
    ]
   },
   {
@@ -88,98 +78,9 @@
      "languageId": "r"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Updating HTML index of packages in '.Library'\n",
-      "\n",
-      "Making 'packages.html' ...\n",
-      " done\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Installer les packages à la localisation par défaut\n",
-    "install.packages(\"ggplot2\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "16b27cdc",
-   "metadata": {},
-   "source": [
-    "#### Sur les machines virtuelles FPSE\n",
-    "\n",
-    "L'option 1 ne fonctionne pas sur les machines virtuelles FPSE car nous n'avons pas la permission d'écrire à la localisation par défaut. Il faut donc choisir l'option 2 ou 3 selon votre préférence. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "622d4e25",
-   "metadata": {},
-   "source": [
-    "**Option 2 :** installer les packages sur le disque H (`H:/`)\n",
-    "\n",
-    "Avantage : vous n'aurez pas besoin de réinstaller les packages à chaque fois que vous vous connectez à la machine virtuelle car le contenu de votre disque H personnel est conservé.  \n",
-    "Désavantage : les packages occupent de l'espace de stockage sur votre disque H."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d4f91c89-c40c-4fbe-83c9-f27e5b3e6b26",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
    "outputs": [],
    "source": [
-    "# Pour installer les packages R sur votre disque H\n",
-    "\n",
-    "# Créer un répertoire sur le disque H pour les packages R\n",
-    "dir.create(\"H:/R/win-library/4.4\", recursive = TRUE)\n",
-    "\n",
-    "# Indiquer à R d'installer les packages R dans ce répertoire\n",
-    ".libPaths(\"H:/R/win-library/4.4\")\n",
-    "\n",
-    "# Installer les packages\n",
-    "install.packages(\"ggplot2\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bae5ac1b",
-   "metadata": {},
-   "source": [
-    "**Option 3 :** installer les packages sur le disque local (`C:/`)\n",
-    "\n",
-    "Avantage : les packages n'occupent pas d'espace de stockage sur votre disque H.  \n",
-    "Désavantage : vous devrez réinstaller les packages à chaque fois que vous vous connectez à la machine virtuelle car le contenu du disque local n'est pas conservé lorsque vous vous déconnectez.  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9c64bdd5",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Pour installer les packages R sur le disque local\n",
-    "\n",
-    "# Indiquer à R d'installer les packages R dans ce répertoire\n",
-    "# ATTENTION : remplacer \"votre_identifiant_isis\" dans la commande suivante par\n",
-    "# votre identifiant ISIS (nom court), e.g. \"C:/Users/wuensch/AppData/Local/R/win-library/4.4\"\n",
-    ".libPaths(\"C:/Users/votre_identifiant_isis/AppData/Local/R/win-library/4.4\")\n",
-    "\n",
-    "# Installer les packages\n",
+    "# Installation des packages R\n",
     "install.packages(\"ggplot2\")"
    ]
   },
@@ -190,7 +91,7 @@
    "source": [
     "### Chargement des packages R\n",
     "\n",
-    "Une fois installés, les packages R doivent être chargés dans la session R. Cette étape devra être exécutée à chaque fois que vous ouvrez une nouvelle session R, indépendamment d'où les packages sont installés."
+    "Une fois installés, les packages doivent être chargés dans la session R."
    ]
   },
   {
