--- a/vraisemblance/vraisemblance.ipynb
+++ b/vraisemblance/vraisemblance.ipynb
@@ -27,10 +27,7 @@
    "source": [
     "# library utilisée pour faire le graphique\n",
     "# install.packages(\"ggplot2\") # installation, à faire une seule fois\n",
-    "library(ggplot2) # chargement\n",
-    "\n",
-    "# couleur pour le graphique\n",
-    "darkred  = \"#8B0000\"   \n"
+    "library(ggplot2) # chargement\n"
    ]
   },
   {
@@ -62,7 +59,7 @@
     "### 1. Par essais et erreurs\n",
     "\n",
     "Nous allons utiliser notre fonction `dbinom` et calculer la probabilité des nos données avec différent valeurs du paramètre $\\theta$ comme par example\n",
-    "$theta = 0.1$"
+    "$\\theta = 0.1$"
    ]
   },
   {
@@ -95,18 +92,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "92950946-fd7e-46c6-83c9-a8e713faed2c",
+   "cell_type": "markdown",
+   "id": "7dc55b5f-5543-44d7-a0e6-3438e86727b3",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "ou $theta = 0.3$"
+    "ou $ \\theta = 0.3$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 63,
    "id": "39b7ef68-4b17-42e4-bc76-4dee00a2a7df",
    "metadata": {},
    "outputs": [
@@ -134,18 +129,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "837154bb-3426-48e5-b214-5bef73a25021",
+   "cell_type": "markdown",
+   "id": "dfeaeb9e-57ce-439e-9617-bca51ac95e4b",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "ou encore $theta = 0.9$"
+    "ou encore $\\theta = 0.9$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 70,
    "id": "8d37ef93-a91b-4e85-aad1-2a02afc95c59",
    "metadata": {},
    "outputs": [
