--- a/probabilité/probabilité.ipynb
+++ b/probabilité/probabilité.ipynb
@@ -1117,7 +1117,7 @@
    "id": "4ea98cd5-631a-4b3f-bcec-a3df94a21252",
    "metadata": {},
    "source": [
-    "## la fonction de répartition cumulative\n",
+    "## La fonction de répartition cumulative\n",
     "\n",
     "Comme dans le cas de la variable aléatoire discrete, aussi dans le cas de la variable aléatoire continue nous pouvons reflechir en terms de probabilité cumulée.\n",
     "\n",
@@ -1309,14 +1309,6 @@
    "source": [
     "En théorie des probabilités la representation graphique de loi de Cauchy, se fait par la *Versiera* di Maria Gaetana Agnesi.  Bien que cette courbe ait été introduite à l’origine dans un autre contexte — la géométrie analytique — sa forme mathématique exacte correspond à la fonction de densité de la distribution de Cauchy standard.  Bien que Maria Gaetana Agnesi n’ait pas elle-même travaillé dans le domaine de la probabilité, la fonction qu’elle a étudié est devenue une pièce centrale dans la modélisation statistique moderne, surtout dans les domaines où l’on souhaite éviter d’imposer une certitude excessive sur les valeurs extrêmes."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "30354a87-3913-4075-80f9-17c14e3ee4eb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
