updated beta distribution for prior notation

--- a/priors/priors.ipynb
+++ b/priors/priors.ipynb
@@ -46,7 +46,7 @@
     "La loi beta est utilisée pour definir des priors de paramètres qui varient entre 0 et 1. La distribution de la loi beta est définie comme il suit :\n",
     "\n",
     "$$\n",
-    "f(x) = \\frac{\\Gamma(\\alpha + \\beta)}{\\Gamma(\\alpha)\\Gamma(\\beta)} \\, x^{\\alpha - 1} (1 - x)^{\\beta - 1}\n",
+    "f(\\theta) = \\frac{\\Gamma(\\alpha + \\beta)}{\\Gamma(\\alpha)\\Gamma(\\beta)} \\, \\theta^{\\alpha - 1} (1 - \\theta)^{\\beta - 1}\n",
     "$$\n",
     "\n",
     "Et peux varier en fonctions de deux paramètres de forme:\n",
