add some of the missing text

--- a/vraisemblance/vraisemblance.ipynb
+++ b/vraisemblance/vraisemblance.ipynb
@@ -5,7 +5,10 @@
    "id": "0181d8bf-5d3e-4237-b633-5360da1dc2df",
    "metadata": {},
    "source": [
-    "# Vraisemblance"
+    "# Vraisemblance\n",
+    "\n",
+    "\n",
+    "[ADD GENERAL TEXT HERE EXPLANING THE PRINCIPLE OF THE LL]"
    ]
   },
   {
