--- a/mcmc/mcmc.ipynb
+++ b/mcmc/mcmc.ipynb
@@ -55,29 +55,27 @@
    "source": [
     "### Exemple à la main\n",
     "\n",
-    "Dans le chapitre sur les priors, nous avons calculé la distribution à posteriori en utilisant la loi Beta constante de normalisation.\n",
-    "Ici nous allons caluler la même distribution à posteriori en utilisant l'intégration numérique.\n",
-    "Nous allons reprender l'ecxact same exemple. Dans lequel nous avons 10 personnes qui ont suivitn le traietment avec 3 personnes qui ont eu une rechute à 6 mois.\n",
-    "Nous avons une modele d'une loi binomiale avec le paramètre theta de probabilité de rechute à estimer et une prior défini par une loi Beta avec $\\alpha = \\beta = 2$.\n",
-    "\n",
-    "Dans le code nous allons formaliser ces donneés comme il suit:"
+    "Dans le chapitre sur les priors, nous avons calculé la distribution a posteriori en utilisant la loi Bêta et sa constante de normalisation.\n",
+    "Ici, nous allons calculer la même distribution a posteriori en utilisant l'intégration numérique.\n",
+    "Nous allons reprendre exactement le même exemple : dix personnes ont suivi le traitement, et trois d’entre elles ont eu une rechute à six mois.\n",
+    "Nous utilisons un modèle basé sur une loi binomiale, avec un paramètre θθ représentant la probabilité de rechute à estimer, et un prior défini par une loi Bêta avec $\\alpha = \\beta = 2$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 119,
    "id": "7138ef86-368a-4b83-aa10-79e4aa16f2ab",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# données\n",
+    "# Données\n",
     "k = 3\n",
     "n = 10\n",
-    "# hyperparamètres du prior\n",
+    "# Hyperparamètres du prior\n",
     "alpha = 2\n",
     "beta = 2\n",
-    "# espace du paramètre à esplorer (varie entre 0 et 1 avec des étapes de 0.002)\n",
-    "p <- seq(0,1,.002)\n"
+    "# Espace des paramètres à explorer (variant de 0 à 1 avec des pas de 0,002)\n",
+    "p <- seq(0,1,.002)"
    ]
   },
   {
@@ -85,7 +83,8 @@
    "id": "95c369a5-ae29-4931-9fa5-28d71f5197b6",
    "metadata": {},
    "source": [
-    "Sur la base de cela nous pouvons créer une fonction qui multiple la vraisembalnce (que nous calculons avec un modèle binomiale) avec le prior (que nous definissons avec une loi Beta). Cela represente le nominateur dans la formule de Bayse. "
+    "À partir de cela, nous allons construire une fonction qui, pour chaque valeur du paramètre, multiplie la vraisemblance (calculée avec un modèle binomial) par le prior (défini à l’aide d’une loi Beta).\n",
+    "Cette opération correspond au numérateur dans la formule de Bayes, c’est-à-dire la partie qui combine ce que nous savons avant (le prior) et ce que nous apprenons avec les données (la vraisemblance) et dans le code elle s'implément comme il suit:"
    ]
   },
   {
@@ -96,19 +95,15 @@
    "outputs": [],
    "source": [
     "# numérateur dans la forumle de bayse : vraisemblance * prior\n",
-    "numerator <- function(p) dbinom(k,n,p)*dbeta(p,alpha,beta)\n",
-    "\n"
+    "numerator <- function(p) dbinom(k,n,p)*dbeta(p,alpha,beta)\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "8a70ffd9-31a9-4dea-9415-191e51e70e17",
+   "cell_type": "markdown",
+   "id": "23c0f7d3-1d41-451a-a3a4-39b3fa879de4",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Allons voir la representation graphique du numerateur\n",
-    "\n"
+    "Nous pouvons créer une representation graphique de cette distribution comme il suit:"
    ]
   },
   {
