added text vraisemblance

--- a/vraisemblance/vraisemblance.ipynb
+++ b/vraisemblance/vraisemblance.ipynb
@@ -6,9 +6,7 @@
    "metadata": {},
    "source": [
     "# Vraisemblance\n",
-    "\n",
-    "\n",
-    "[ADD GENERAL TEXT HERE EXPLANING THE PRINCIPLE OF THE LL]"
+    "\n"
    ]
   },
   {
@@ -31,6 +29,33 @@
     "# library utilisée pour faire le graphique\n",
     "# install.packages(\"ggplot2\") # installation, à faire une seule fois\n",
     "library(ggplot2) # chargement\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "098d0718-6562-4cd9-af29-979164017da2",
+   "metadata": {},
+   "source": [
+    "La vraisemblance est le moteur common au coeur de l'approche fréquentiste et bayésienne. \n",
+    "\n",
+    "Comme nous avons déjà mentionné dans le chapitre precedants, pour comprendre la vraisemblance, il faut partir de l'idée de base que nous avons un *modèle avec des paramètres*. Un modèle est une description formelle de comment on pense que les données fonctionnent. Par exemple, nous peuvons supposer que la taille des adultes suit une loi normale. Le modèle de la loi normale peut varier selons deux paramètres : la moyenne ($\\mu$) et l'écart type ($\\sigma$). L'objectif du calcule de la vraisembalce est celui de trouver les valeurs des paramètres qui font en sorte que notre modèle represente au mieux les données observées.\n",
+    "\n",
+    "La vraisemblance quantifie l'adéquation du modèle aux données, elle exprime à quel point les données sont probables étant donnée notre modèle ou notre hypothèse: $P(D|\\theta)$. Si on réprend notre exemple de la taille des adultes, nous pouvons dire que nous avons fixé un modèle (i.e., une loi normale) et on cherche a estimer les paramètres (e.g., moyenne = 160 cm, écart type = 8 cm), afin de trouver les paramètres de la distribution normales qui augement la vraisemblances d'observers les données que nous avons recoltés.\n",
+    "\n",
+    "Plus formellement nous pouvons conceptualiser la vraisemblance comme une fonction qui prend en input le modèle et les paramètres et donne comme output une valuer qui exprime à quel point ces paramètres expliquent bien les données.  Dans notre exemple la fonction de vraisemblance pour un modèle avec paramètres $\\mu$ et $\\sigma$ est donnée par :\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "Lik(\\mu, \\sigma) = \\prod_{i=1}^{n} f(x_i \\mid \\mu, \\sigma)\n",
+    "$$\n",
+    "\n",
+    "où :\n",
+    "\n",
+    "- $f$ est la fonction de densité (dans notre cas, cela sera une loi normale)  pour l'observation $x_i$ donnée les paramètres $\\mu$ et $\\sigma$\n",
+    "    \n",
+    "- $ \\prod $ signifie que l'on multiplie toutes les densités pour chaque observation $i$  allant de $1$ à  $n$\n",
+    "\n",
+    "L'echelle de la vraisemblance ne represnete donc pas des probabilité ou des densité de probabilité, elles nous aide simplement à trouver le meilleur paramètre qui permet à un certain modèle de mieux s'ajouster aux données que nous observons.\n"
    ]
   },
   {
@@ -349,14 +374,6 @@
    "source": [
     "optimize(lik.fun,c(0,1),maximum=TRUE)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "474b268d-80cd-4286-a9ed-8036eead8a0b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
