added text prior 1

--- a/priors/priors.ipynb
+++ b/priors/priors.ipynb
@@ -5,9 +5,7 @@
    "id": "97ff579c-cb60-415e-99a6-dd7d63559702",
    "metadata": {},
    "source": [
-    "# Priors\n",
-    "\n",
-    "[ADD HERE AN EXPLANANTION OF WHAT A PRIORI IS IN GENERAL]"
+    "# Priors\n"
    ]
   },
   {
@@ -40,7 +38,13 @@
    "id": "4895161a-09d3-4c79-8ca0-13fa6af8bcd1",
    "metadata": {},
    "source": [
-    "[ADD AN EXPLANATION HERE SAYIN THAT WE ARE ALWAYS USING THE SAME EXAMPLE]\n",
+    "En statistiques bayésiennes, une idée centrale est que l'on peut exprimer ce que l'on sait (ou ce que l'on croit savoir) sur un paramètre avant d'observer les données. Cette information préalable est appelée le prior, ou à priori.\n",
+    "\n",
+    "Formellement on exprime nous connaissance à priori à travers une distribution de probabilité qui représente notre connaissance ou nos croyances sur les valeurs possibles du paramètre avant d'avoir vu les données.\n",
+    "\n",
+    "Nous pouvons nous referer à notre exemple du traitement pour des troubles d'addiction aux substance dans lequel nous avons 10 personnes qui ont suivit le traitement et nous mésurons le nombre de personne qui ont au moins une rechute à 6 mois.\n",
+    "\n",
+    "C'est que nous cherchons exprimer c'est les connaissances que nous avons sur le paramètre de probabilité de rechute $\\theta$ avant de recolter les données.\n",
     "\n",
     "## La loi Beta\n",
     "\n",
