--- a/vraisemblance/vraisemblance.ipynb
+++ b/vraisemblance/vraisemblance.ipynb
@@ -80,7 +80,7 @@
     "* les données observées $x = 3$, $n = 10$\n",
     "* un modèle $Binomiale$\n",
     "\n",
-    "C'est que nous cherchons c'est de estimer le paramètre de probabilité de rechute $\\$theta$ qui maximise la vraisemblance de nous données observée. Cela ce processus c'est l'estimation de la vraisemblance maximale (*Maximum Liklihood Estimation*; MLE).\n",
+    "C'est que nous cherchons c'est de estimer le paramètre de probabilité de rechute $\\theta$ qui maximise la vraisemblance de nous données observée. Cela ce processus c'est l'estimation de la vraisemblance maximale (*Maximum Liklihood Estimation*; MLE).\n",
     "\n",
     "Et nous pouvons essayer de l'implémenter dans différente manières\n",
     "\n",
