added the last text to prior

--- a/priors/priors.ipynb
+++ b/priors/priors.ipynb
@@ -48,7 +48,7 @@
     "\n",
     "## La loi Beta\n",
     "\n",
-    "La loi beta est utilisée pour definir des priors de paramètres qui varient entre 0 et 1. La distribution de la loi beta est définie comme il suit :\n",
+    "La loi beta est utilisée pour definir des priors de paramètres qui varient entre 0 et 1, comme dans le cas de notre paramètre de rechute $\\theta$. La distribution de la loi beta est définie comme il suit :\n",
     "\n",
     "$$\n",
     "f(\\theta) = \\frac{\\Gamma(\\alpha + \\beta)}{\\Gamma(\\alpha)\\Gamma(\\beta)} \\, \\theta^{\\alpha - 1} (1 - \\theta)^{\\beta - 1}\n",
@@ -431,11 +431,43 @@
    "id": "929eee20-632e-454b-9bbf-cf7822faefc8",
    "metadata": {},
    "source": [
-    "[ADD TEXT EXPLANING HOW IN THE CASE OF THE BINOMIAL WE CAN MANUALLY CALCULATE THE POSTERIOR]\n",
+    "Dans le cas de notre exemple nous pouvons facilement conjuguer la vraisembalnce avec le prior parce que nous avons un modèle très simple. Nous pouvons formaliser notre modèle comme il suit:\n",
     "\n",
-    "n = 10 ; k = 3 alpha = 2 beta = 2\n",
+    "- $x \\sim \\mathrm{Binomial}(n, \\theta) \\quad \\text{[vraisemblance]}$\n",
     "\n",
-    "beta (a + k, b+n-k)\n"
+    "- $\\theta \\sim \\mathrm{Beta}(2, 2) \\quad \\text{[prior pour } \\theta \\text{]}$\n",
+    "\n",
+    "\n",
+    "Pour ce qui concerne les données observées nous avons:\n",
+    "\n",
+    "\n",
+    "- $n = 10 \\quad \\text{[taille de l'échantillon]}$\n",
+    "\n",
+    "- $k = 3 \\quad \\text{[rechute à 6 mois]}$\n",
+    "\n",
+    "\n",
+    "Comme dans la loi beta on connait la formule exacte de la constante de normalisation nous pouvons l'ignorer pour le début:\n",
+    "\n",
+    "$$ P(\\theta \\mid x) \\propto P(x \\mid \\theta) \\cdot P(\\theta) $$\n",
+    "\n",
+    "\n",
+    "Ensuite nous allons simplement rentrer le modèle de la binomiale dans la vraisemblance ($P(x \\mid \\theta)$) et le modèle de la beta dans le prior ($P(\\theta)$) comme il suit:\n",
+    "\n",
+    "$$ P(\\theta \\mid x) \\propto \\binom{n}{k} \\theta^k (1 - \\theta)^{n - k} \\cdot \\theta^{\\alpha - 1} (1 - \\theta)^{\\beta - 1}$$\n",
+    "\n",
+    "Si on rearrages les termes on obtien:\n",
+    "\n",
+    "$$ P(\\theta \\mid x) \\propto  \\theta^{(\\alpha + k)  - 1} (1 - \\theta)^{(\\beta+n-k) - 1}$$\n",
+    "\n",
+    "et si on rajoute la constante de normalisation on obtien simplement la distribution à posteriori du paramètres $\\theta$ comme il suit:\n",
+    "\n",
+    "$$ \\theta \\sim \\text{Beta}(\\alpha + k, \\beta + n - k) $$\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -443,7 +475,13 @@
    "id": "18590f9b-180b-4a45-80cc-de667429a647",
    "metadata": {},
    "source": [
-    "Maintenant que nous vons les paramètres nous pouvons caluler la distribution à posteriori"
+    "On utilisant cette simple formule nous pouvons l'appliquer à nos données et notre prior pour obtenir la distruntion  à posteriori comme il suit:\n",
+    "\n",
+    "$$ \\theta \\sim \\text{Beta}(2 + 3, 2 + 10 - 3) $$\n",
+    "\n",
+    "$$ \\theta \\sim \\text{Beta}(5, 9) $$\n",
+    "\n",
+    "Et nous pouvons l'impléem"
    ]
   },
   {
@@ -464,11 +502,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c57dcc4f-de7f-43d9-853d-433032c5939a",
+   "cell_type": "markdown",
+   "id": "b3ff3e31-462f-466b-8430-1bbc4699e1c6",
    "metadata": {},
-   "outputs": [],
    "source": [
     "Une fois que nous avons la distribution nous pouvons calculer la valeur mediane"
    ]
@@ -526,11 +562,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9202d5af-562b-4599-9374-e24fb3dda6be",
+   "cell_type": "markdown",
+   "id": "b3043187-8a5e-455d-9c73-652010c57444",
    "metadata": {},
-   "outputs": [],
    "source": [
     "Nous pouvons aussi representer visuellement les résultats"
    ]
